# LM2PCG

./: .env  .gitignore  CMakeLists.txt  README.md  ai_api_wrapper.py  cors_server.py  enrich_room_types.py  mutli_room_agent2.py  pcg.sh  room_database.py  spatial_rooms.db
data/configs/: .env  default.yaml
data/rooms/Full House/: objects_manifest.csv  rooms_manifest.csv
data/rooms/Full House/floor_0/: rooms_manifest.csv
data/rooms/Full House/floor_1/: rooms_manifest.csv
data/rooms/client_room/: lamp.ply  table.ply
data/rooms/client_room/floor_0/: rooms_manifest.csv
data/rooms/client_room/floor_1/: rooms_manifest.csv
data/rooms/conferenceroom_1/: board.ply  chair.ply  closet.ply  door.ply  table.ply
data/rooms/conferenceroom_2/: board.ply  chair.ply  closet.ply  couch.ply  door.ply  table.ply  window.ply
data/rooms/conferenceroom_3/: appliance.ply  board.ply  chair.ply  closet.ply  door.ply  table.ply  window.ply
docs/: AI_API.md  CHANGELOG.md  POINTCLOUD_VIEWER.md  PROMPT_UPDATE_SUMMARY.md  SESSION_BASED_SELECTION_USAGE.md  USER_SELECTION_WORKFLOW.md
include/pcg/: FEC.h  clustering.h  params.hpp  ply_io.hpp
include/pcg/geometry/: volume.hpp
output/Full House/floor_0/room_001/: room_001.csv
output/Full House/floor_0/room_002/: room_002.csv
output/Full House/floor_0/room_003/: room_003.csv
output/Full House/floor_0/room_006/: room_006.csv
output/Full House/floor_0/room_007/: room_007.csv
output/Full House/floor_1/room_001/: room_001.csv
output/Full House/floor_1/room_002/: room_002.csv
output/Full House/floor_1/room_005/: room_005.csv
output/client_room/floor_0/room_001/: room_001.csv
output/client_room/floor_0/room_002/: room_002.csv
output/client_room/floor_0/room_003/: room_003.csv
output/client_room/floor_0/room_004/: room_004.csv
output/client_room/floor_0/room_005/: room_005.csv
output/floor_0/: rooms_manifest.csv
output/floor_0/room_001/: room_001.csv
output/floor_0/room_002/: room_002.csv
output/floor_0/room_003/: room_003.csv
output/floor_0/room_004/: room_004.csv
output/floor_0/room_005/: room_005.csv
output/floor_1/: rooms_manifest.csv
output/floor_1/room_001/: room_001.csv
output/floor_1/room_002/: room_002.csv
output/floor_1/room_003/: room_003.csv
output/floor_1/room_004/: room_004.csv
output/floor_1/room_005/: room_005.csv
output/tmp/: box1_uobb.ply
scripts/: ai_api.py  api_server.py  run_batch.sh  test_ai_agent_workflow.py  test_full_workflow.sh  test_manual_ops.py  test_realtime_selection.py
src/apps/: pcg_area.cpp  pcg_bbox.cpp  pcg_color.cpp  pcg_reconstruct.cpp  pcg_room.cpp  pcg_volume.cpp
src/geometry/: bbox.cpp  clustering.cpp  volume.cpp
src/io/: params.cpp  ply_io.cpp
web/pointcloud-viewer/: README.md  package-lock.json  package.json
web/pointcloud-viewer/scripts/: downsample_and_prepare_room.mjs  prepare_visualization.mjs  uobb_compute.mjs
web/pointcloud-viewer/src/: App.tsx  types.ts
web/pointcloud-viewer/src/loaders/: ply.ts
(+1049 files in other folders)
